2004-02-18  Christopher Armstrong  <radix@twistedmatrix.com>

	* .: Releasing Twisted 1.2.0rc2. Brown-paper bag release bug.

2004-02-17  Christopher Armstrong  <radix@twistedmatrix.com>

	* .: Releasing Twisted 1.2.0rc1.

2004-02-13  Brian Warner  <warner@lothar.com>

	* doc/howto/faq.xhtml: add entry on transport.getPeer()

2004-01-31  Christopher Armstrong  <radix@twistedmatrix.com>

	* .: Releasing Twisted 1.1.2alpha2 (problem with Debian packaging).

2004-01-30  Christopher Armstrong  <radix@twistedmatrix.com>

	* .: Releasing Twisted 1.1.2alpha1.

2004-01-23  Christopher Armstrong  <radix@twistedmatrix.com>

	* twisted/scripts/trial.py: trial now supports a --coverage
	option, requiring Python 2.3.3. Give it a directory name (relative
	to _trial_temp) to put code-coverage info in. It uses the stdlib
	'trace' module.

2004-01-21  Pavel Pergamenshchik  <pp64@cornell.edu>

	* twisted/protocols/stateful.py: A new way to write protocols!
	Current state is encoded as a pair (func, len). As soon as len
	of data arrives, func is called with that amount of data.  New
	state is returned from func.
	* twisted/test/test_stateful.py: Tests and an example, an
	Int32StringReceiver implementation.

2004-01-18  Christopher Armstrong  <radix@twistedmatrix.com>

	* twisted/web/resource.py: The default render method of Resource
	now supports delegating to methods of the form "render_*" where
	"*" is the HTTP method that was used to make the
	request. Examples: request_GET, request_HEAD, request_CONNECT, and
	so on. This won't break any existing code - when people want to
	use the better API, they can stop overriding 'render' and instead
	override individual render_* methods.

2004-01-13  Itamar Shtull-Trauring  <itamar@itamarst.org>

	* twisted/web/soap.py: Beginning of client SOAP support.

2004-01-10  Andrew Bennetts <spiv@twistedmatrix.com>

	* twisted/protocols/ftp.py: Added support for partial downloads
	and uploads to FTPClient (see the offset parameter of retrieveFile).
